# X264Cmake

./: README.md  build.gradle  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/libs/: breakpad-build-0.0.1.aar  mvp.aar
app/src/androidTest/java/com/coder/x264cmake/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/json/: beauty.json  beauty_list.json  filter.json
app/src/main/assets/shader/base/: fragment_base.glsl  fragment_oes.glsl  vertex_base.glsl  vertex_oes.glsl
app/src/main/assets/shader/beauty/: fragment_beauty_skin.glsl
app/src/main/assets/shader/color/: fragment_amaro.glsl  fragment_antique.glsl  fragment_black_cat.glsl  fragment_brannan.glsl  fragment_brooklyn.glsl  fragment_calm.glsl  fragment_cool.glsl  fragment_crayon.glsl  fragment_earlybird.glsl  fragment_emerald.glsl  fragment_evergreen.glsl  fragment_fairytale.glsl  fragment_freud.glsl
app/src/main/assets/shader/effect/: fragment_effect_shake.glsl  fragment_effect_soul_stuff.glsl
app/src/main/cpp/: faac_encode.c  faac_encode.h  fdk-aac_core.c  fdk-aac_core.h  fdk-aac_encode.c  fdk-aac_encode.h  h264-encode.cpp  h264-encode.h  native-lib.cpp  queue.cpp  queue.h  rtmp_core.c  rtmp_core.h  rtmp_pusher.cpp  safe_queue.c  safe_queue.h  x264_encode.c  x264_encode.h  yuv_convert.c  yuv_convert.h  yuv_core.cpp  yuv_rotate.c  yuv_rotate.h
app/src/main/cpp/librtmp/: log.h  rtmp.h
app/src/main/java/com/coder/x264cmake/: BaseApplication.java  CameraActivity.java  FileUtils.java  GLCameraActivity.java  H264Activity.java  MainActivity.java  X264Encode.java  YUVFormat.java
app/src/main/java/com/coder/x264cmake/annotation/: YUVFormat.java
app/src/main/java/com/coder/x264cmake/core/: ActivityStackManager.java
app/src/main/java/com/coder/x264cmake/jni/: RtmpPusher.java  X264Encode.java  YuvCore.java
app/src/main/java/com/coder/x264cmake/module/: GLRenderer.java
app/src/main/java/com/coder/x264cmake/module/audio/: AudioLoader.java
app/src/main/java/com/coder/x264cmake/module/camera/: Camera1Loader.java  Camera2Loader.java  CameraLoader.java  ICameraLoader.java
app/src/main/java/com/coder/x264cmake/utils/: DensityUtils.java  EGLCore.java  FileUtils.java  GlideUtils.java  LogUtils.java  MatrixUtils.java  OpenGlUtils.java  TextureCoordinateUtils.java  ToastUtils.java  YUV420Utils.java
app/src/main/java/com/coder/x264cmake/widgets/: CameraPreview.java  GLCameraPreview.java  GLCameraView.java  RoundOutlineProvider.java
app/src/main/res/anim/: dialog_slide_in_bottom.xml  dialog_slide_out_bottom.xml
app/src/main/res/drawable/: dialog_camera_filter_bg.xml  dialog_common_message_bg.xml  filter_seek_progress.xml  filter_seek_progress_enable_no.xml  filter_seek_progress_enable_ok.xml  filter_seek_thumb.xml  selector_camera_btn.xml  shape_camera_shoot_btn.xml  shape_camera_shoot_btn_border.xml
app/src/main/res/layout/: activity_camera.xml  activity_gl_camera.xml  activity_home.xml  activity_main.xml  adapter_camera_filter.xml  dialog_camera_filter.xml  dialog_common_message.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml  themes.xml  values.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/coder/x264cmake/: ExampleUnitTest.kt
keystore/: x264cmake.jks  x264cmake.txt
(+64 files in other folders)
